Fixin Internal Link

--- a/Resources/views/Admin/datatype/form/internallink.html.twig
+++ b/Resources/views/Admin/datatype/form/internallink.html.twig
@@ -4,7 +4,7 @@
         <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="padding:0;border:none;">
           {% set routes = getRoutes() %}
           {% for route in routes %}
-            <option value="{{ route.url }}" {% if (attribute.value) and (attribute.value.value == route.url) %}selected{% endif %}>{{route.title}} - {{ route.url }}</option>
+            <option value="{{ route.id }}" {% if (attribute.value) and (attribute.value.value == route.id) %}selected{% endif %}>{{route.title}} - {{ route.url }}</option>
           {% endfor %}
         </select>
     </div>
