--- a/Resources/views/Admin/datatype/internallink.html.twig
+++ b/Resources/views/Admin/datatype/internallink.html.twig
@@ -1,1 +1,1 @@
-{% if attribute.value %}<span class="link"><a href="{{ attribute.value.value }}" title="{{ attribute.value.ref }}" target="_blank">{{ attribute.value.page_title }}</a></span>{% endif %}
+{% if attribute.value %}<span class="link"><a href="{{ path('majes_route_' ~ attribute.value.value) }}" title="{{ attribute.value.ref }}" target="_blank">{{ attribute.value.page_title }}</a></span>{% endif %}
