--- a/Resources/views/Admin/datatype/form/link.html.twig
+++ b/Resources/views/Admin/datatype/form/link.html.twig
@@ -10,7 +10,7 @@
   {% endif %}
 {% endif %}
 <div class="form-group">
-  <label for="myaccount_media" class="control-label col-lg-3">{{attribute.title}} </label>
+  <label for="myaccount_media" class="control-label col-lg-3">Link </label>
   <div class="col-lg-9">
     <input class="form-control" placeholder="Link url" type="text" name="attributes[{{attribute.block_attribute_ref}}][value]" value="{{url|replace({'/app_dev.php':''})}}"/>
   </div>
