--- a/Resources/views/Admin/datatype/form/editor.html.twig
+++ b/Resources/views/Admin/datatype/form/editor.html.twig
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
+    {# <label class="control-label col-lg-3">{{attribute.title}}</label> #}
     <div class="row">
     <div class="col-lg-12" style="clear: both">
         <textarea class="form-control" rows="3" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" style="height: 300px;">{% if attribute.value %}{{attribute.value.value}}{% endif %}</textarea>
