--- a/Resources/views/Admin/datatype/form/internallink.html.twig
+++ b/Resources/views/Admin/datatype/form/internallink.html.twig
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
+    <label class="control-label col-lg-3">Link</label>
     <div class="col-lg-9">
         <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="padding:0;border:none;">
           {% set routes = getRoutes() %}
