--- a/Resources/views/Admin/datatype/form/listbox.html.twig
+++ b/Resources/views/Admin/datatype/form/listbox.html.twig
@@ -1,17 +1,19 @@
-<div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
-    <div class="col-lg-9">
-        <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="padding:0;border:none;">
-            <option></option>
-            {% set list = getListbox(attribute.block_attribute_setup) %}
-            {% for item in list.content %}
-                <option value="{{item.key}}" {% if (attribute.value) and (attribute.value.value == item.key) %}selected{% endif %}>{{item.value}}</option>
-            {% endfor %}
-        </select>
+{% if attribute.block_attribute_setup is not null %}
+    {% set list = getListbox(attribute.block_attribute_setup) %}
+    <div class="form-group">
+        <label class="control-label col-lg-3">{{list.name}}</label>
+        <div class="col-lg-9">
+            <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="padding:0;border:none;">
+                <option></option>
+                {% for item in list.content %}
+                    <option value="{{item.key}}" {% if (attribute.value) and (attribute.value.value == item.key) %}selected{% endif %}>{{item.value}}</option>
+                {% endfor %}
+            </select>
+        </div>
     </div>
-</div>
-<script>
-    $('select#{{attribute.block_attribute_ref}}').select2({
-        allowClear: true
-    });
-</script>
+    <script>
+        $('select#{{attribute.block_attribute_ref}}').select2({
+            allowClear: true
+        });
+    </script>
+{% endif %}
