--- a/Resources/views/Admin/datatype/form/listboxmultiple.html.twig
+++ b/Resources/views/Admin/datatype/form/listboxmultiple.html.twig
@@ -1,14 +1,16 @@
-<div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
-    <div class="col-lg-9">
-        <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value][]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{ attribute.value.value|join(' ') }}{% endif %}" style="padding:0;border:none;" multiple>
-        	{% set list = getListbox(attribute.block_attribute_setup) %}
-        	{% for item in list.content %}
-        		<option value="{{item.key}}" {% if (attribute.value) and (item.key in attribute.value.value) %}selected{% endif %}>{{item.value}}</option>
-        	{% endfor %}
-        </select>
+{% if attribute.block_attribute_setup is not null %}
+    {% set list = getListbox(attribute.block_attribute_setup) %}
+    <div class="form-group">
+        <label class="control-label col-lg-3">{{list.name}}</label>
+        <div class="col-lg-9">
+            <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value][]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{ attribute.value.value|join(' ') }}{% endif %}" style="padding:0;border:none;" multiple>
+            	{% for item in list.content %}
+            		<option value="{{item.key}}" {% if (attribute.value) and (item.key in attribute.value.value) %}selected{% endif %}>{{item.value}}</option>
+            	{% endfor %}
+            </select>
+        </div>
     </div>
-</div>
-<script>
-	$('select#{{attribute.block_attribute_ref}}').select2();
-</script>
+    <script>
+    	$('select#{{attribute.block_attribute_ref}}').select2();
+    </script>
+{% endif %}
