--- a/Resources/views/Admin/datatype/form/textline.html.twig
+++ b/Resources/views/Admin/datatype/form/textline.html.twig
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
+    {# <label class="control-label col-lg-3">{{attribute.title}}</label> #}
     <div class="col-lg-9">
         <input class="form-control" placeholder="Text" type="text" name="attributes[{{attribute.block_attribute_ref}}][value]" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}"/>
     </div>
