Fixin checkbox display in preview

--- a/Resources/views/Admin/datatype/checkbox.html.twig
+++ b/Resources/views/Admin/datatype/checkbox.html.twig
@@ -1,1 +1,3 @@
-{% if attribute.value %}<span class="textline">{% if attribute.value['value'] is defined %}{{ attribute.value['value'] }}{% endif %}</span>{% endif %}
+{% if attribute.value %}
+	<span class="textline">{% if attribute.value['value'] is defined %}Is {% else %}Not {% endif %}{{attribute.title}}</span>
+{% endif %}
