Fixin initilaisation of date

--- a/Resources/views/Admin/datatype/form/date.html.twig
+++ b/Resources/views/Admin/datatype/form/date.html.twig
@@ -1,11 +1,10 @@
 <div class="form-group">
-    <label class="control-label col-lg-3">{{attribute.title}}</label>
     <div class="col-lg-9">
-        <input class="form-control" placeholder="Date" type="text" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}"/>
+        <input class="form-control" placeholder="Date" type="text" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="z-index: 100000;"/>
     </div>
 </div>
 <script>
 $('input#{{attribute.block_attribute_ref}}').datepicker({
-    dateFormat: "yy-mm-dd"
+    format: "dd-mm-yyyy"
 });
 </script>
