--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -51,7 +51,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', '{{ google.analytics }}', '{{ app.request.host }}');
+              ga('create', '{{ google.analytics }}', 'auto');
               ga('send', 'pageview');
             
             </script>
