Adding posibility of manifest.cache

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html {% block manifest %}{% endblock %}>
     {% block head %}
     <head>
         <title>{% block title %}Majes Cms{% endblock %}</title>
