--- a/Resources/views/Admin/datatype/listbox.html.twig
+++ b/Resources/views/Admin/datatype/listbox.html.twig
@@ -4,7 +4,7 @@
 		<span class="textline">
 			{% set list = getListbox(attribute.block_attribute_setup) %}
 				{% for item in list.content %}
-		        	{% if item.key == attribute.value.value %}{{item.value}}{% endif %}
+		        	{% if item.slug == attribute.value.value %}{{item.value}}{% endif %}
 		        {% endfor %}
 		</span><br/>
 	{% endspaceless %}
