--- a/Resources/views/Index/parts/block.html.twig
+++ b/Resources/views/Index/parts/block.html.twig
@@ -1,6 +1,11 @@
 {% if container == true %}<section id="s_{{ block.block_ref }}" class="block{% if block.is_tablet == 0 %} hidden-tablet{% endif %}{% if block.is_desktop == 0 %} hidden-desktop{% endif %}{% if block.is_mobile == 0 %} hidden-phone{% endif %}">{% endif %}
-	{% include [
-		'MajesTeelBundle:Cms:blocks/' ~ block.block_ref ~ '.html.twig', 
-		'MajesCmsBundle:Index:block/' ~ block.block_ref ~ '.html.twig', 
-		'MajesCmsBundle:Index:block/none.html.twig'] %}
+	{% if params.template is defined %}
+		{% include [
+			'MajesTeelBundle:Cms:blocks/' ~ params.template ~ '.html.twig'] %}
+	{% else %}
+		{% include [
+			'MajesTeelBundle:Cms:blocks/' ~ block.block_ref ~ '.html.twig',
+			'MajesCmsBundle:Index:block/' ~ block.block_ref ~ '.html.twig',
+			'MajesCmsBundle:Index:block/none.html.twig'] %}
+	{% endif %}
 {% if container == true %}</section>{% endif %}
