--- a/Resources/views/Admin/parts/tree.html.twig
+++ b/Resources/views/Admin/parts/tree.html.twig
@@ -14,11 +14,12 @@
                         <div class="panel-body">
                             <a href="{{ path('_admin_sitemap', {'host_id' : host.id}) }}" class="btn btn-primary-outline pull-right"><i class="icon-code"></i>{% trans %}See Sitemap.xml{% endtrans %}</a>
                             {% for nav in menu[host.id] %}
+                            {% if host.defaultLocale is not null %}{% set langForHost = host.defaultLocale %}{% else %}{% set langForHost = default_lang %}{% endif %}
                             <h3>{{ nav.data.title }}</h3>
                             <!-- Definition tree structure -->
                             <div id="tree_{{host.id}}_{{nav.data.id}}"></div>
-        
-                            <a class="btn btn-default pull-right" style="margin: 10px 10px" href="{{ path('_cms_content') }}/0/0/{{nav.data.id}}/{{ default_lang }}/{{ host.id }}"><i class="icon-file-text-alt"></i> Add a page</a>
+
+                            <a class="btn btn-default pull-right" style="margin: 10px 10px" href="{{ path('_cms_content') }}/0/0/{{nav.data.id}}/{{ langForHost }}/{{ host.id }}"><i class="icon-file-text-alt"></i> Add a page</a>
 
                             <div style="clear: both"></div>
                             <script type="text/javascript">
@@ -33,34 +34,34 @@
                                     useContextMenu: false,
                                     onCreateLi: function(node, $li) {
                                         $li.find('.jqtree-element').append(
-                                            '<a href="#node-'+ node.id +'" class="menu pull-right icon-cog" data-node-id="'+node.id +'"></a><div class="contextMenu"><a class="edit" href="{{ path('_cms_content') }}/'+node.id+'/'+node.parent_id+'/{{nav.data.id}}/{{ default_lang }}"><i class="icon-edit"></i> Edit</a><a class="delete" href="{{ path('_cms_content_delete') }}/' + node.id + '/{{ default_lang }}" onclick="return CoreAdmin.Common.confirmDelete(\'{% trans %}Are you sure you want to delete this page?{% endtrans %}\')"><i class="icon-trash"></i> Remove</a><a class="add" href="{{ path('_cms_content') }}/0/'+node.id+'/{{nav.data.id}}/{{ default_lang }}/{{ host.id }}"><i class="icon-plus"></i> Add a page</a></div>'
-                                        );            
+                                            '<a href="#node-'+ node.id +'" class="menu pull-right icon-cog" data-node-id="'+node.id +'"></a><div class="contextMenu"><a class="edit" href="{{ path('_cms_content') }}/'+node.id+'/'+node.parent_id+'/{{nav.data.id}}/{{ langForHost }}"><i class="icon-edit"></i> Edit</a><a class="delete" href="{{ path('_cms_content_delete') }}/' + node.id + '/{{ langForHost }}" onclick="return CoreAdmin.Common.confirmDelete(\'{% trans %}Are you sure you want to delete this page?{% endtrans %}\')"><i class="icon-trash"></i> Remove</a><a class="add" href="{{ path('_cms_content') }}/0/'+node.id+'/{{nav.data.id}}/{{ langForHost }}/{{ host.id }}"><i class="icon-plus"></i> Add a page</a></div>'
+                                        );
                                     }
                                 });
-                            
+
                                 {% if page_id is not null and page.menu.id == nav.data.id and page.host.id == host.id %}var node = $tree_{{host.id}}_{{nav.data.id}}.tree('getNodeById', {{page_id}}).parent;
                                 $tree_{{host.id}}_{{nav.data.id}}.tree('openNode', node);{% endif %}
                                 $('#tree_{{host.id}}_{{nav.data.id}}').bind(
                                     'tree.move',
                                     function(event) {
-        
+
                                         var moved_node = event.move_info.moved_node;
                                         var target_node = event.move_info.target_node;
                                         var type = event.move_info.position;
                                         var moved_node_id = moved_node.id;
-        
+
                                         if(type == 'inside'){
                                             var parent_id = target_node.id;
                                             var position = 0;
-        
+
                                             var parent = target_node;
                                         }else{
                                             var parent_id = target_node.parent_id;
                                             var position = target_node.id;
-        
+
                                             var parent = target_node.parent;
                                         }
-        
+
                                         //Get ids of siblings
                                         var ids = new Array();
                                         var count = 0;
@@ -68,7 +69,7 @@
                                             ids[count] = moved_node_id;
                                             count++;
                                         }
-        
+
                                         for (var i=0; i < parent.children.length; i++) {
                                             var child = parent.children[i];
                                             if(parent.children[i].id != moved_node_id){
@@ -79,10 +80,10 @@
                                                 ids[count] = moved_node_id;
                                                 count++;
                                             }
-                                           
-        
+
+
                                         }
-                                        
+
                                         $.ajax({
                                             type: 'post',
                                             dataType: 'json',
@@ -94,9 +95,9 @@
                                                     function(e) {
                                                         var self = $(e.target);
                                                         $(".contextMenu.show").removeClass('show');
-                                                
+
                                                         if(self.hasClass('on')){
-                                                            self.removeClass('on');    
+                                                            self.removeClass('on');
                                                         }else{
                                                             $("a.menu.on").removeClass('on');
                                                             self.addClass('on');
@@ -108,7 +109,7 @@
                                         });
                                     }
                                 );
-                            
+
                             });
                             </script>
 
@@ -117,10 +118,10 @@
                     </div>
                 </div>
 
-                
+
 
                 {% endfor %}
-                
+
             </div>
         </div>
     </div>
@@ -132,9 +133,9 @@
          function(e) {
              var self = $(e.target);
              $(".contextMenu.show").removeClass('show');
-     
+
              if(self.hasClass('on')){
-                 self.removeClass('on');    
+                 self.removeClass('on');
              }else{
                  $("a.menu.on").removeClass('on');
                  self.addClass('on');
@@ -142,6 +143,6 @@
              }
          }
      );
-     
+
     });
 </script>
